# CHEHAB

./: run.py  run_linux.py
benchmarks/dot_product/: CMakeLists.txt  dot_product.cpp
benchmarks/dot_product/he/: CMakeLists.txt
benchmarks/gy_kernel/: CMakeLists.txt  gy_kernel.cpp
benchmarks/gy_kernel/he/: CMakeLists.txt
benchmarks/hamming_dist/: CMakeLists.txt  hamming_dist.cpp
benchmarks/hamming_dist/he/: CMakeLists.txt
benchmarks/l2_distance/: l2_distance.cpp
benchmarks/lin_reg/: lin_reg.cpp
benchmarks/poly_reg/: poly_reg.cpp
benchmarks/roberts_cross/: CMakeLists.txt  roberts_cross.cpp
benchmarks/roberts_cross/he/: CMakeLists.txt
benchmarks/sharpering_filter/: CMakeLists.txt  sharpering_filter.cpp
benchmarks/sharpering_filter/he/: CMakeLists.txt
benchmarks/sobel/: CMakeLists.txt  sobel.cpp
benchmarks/sobel/he/: CMakeLists.txt
egraphs/: Cargo.toml
egraphs/src/: extractor.rs  rules.rs
